# ZQPlayer

./: README.md  build.gradle  config.gradle  signature.jks
app/: CMakeLists.txt  build.gradle
app/libs/armeabi/pkgconfig/: libavformat.pc  libswresample.pc  libswscale.pc
app/src/androidTest/java/com/zq/zqplayer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp  native-lib.h
app/src/main/java/com/zq/zqplayer/: GlobalConfiguration.java  MainActivity.kt  ZQPlayerApplication.kt
app/src/main/java/com/zq/zqplayer/activity/: LiveActivity.kt  TempActivity.kt  ZQPlayerServiceTestActivity.kt
app/src/main/java/com/zq/zqplayer/adapter/: FragmentViewPagerAdapter.kt  RecommendAdapter.kt
app/src/main/java/com/zq/zqplayer/bean/: BannerMultiItemEntity.kt  LiveItemDetailBean.java  LiveItemMultiItemEntity.kt  LiveListItemBean.java  RecommendLiveItemMultiItem.kt  RoomInfoBean.java  TitleMultiItemEntity.kt  TopNavigationItemBean.kt  UserInfoBean.kt  ZQPlayerVideoListItemBean.java  ZQPlayerVideoUrlBean.java
app/src/main/java/com/zq/zqplayer/common/: Constants.kt  SimpleTextWatcher.kt
app/src/main/java/com/zq/zqplayer/dagger/component/: RecommendComponent.kt
app/src/main/java/com/zq/zqplayer/dagger/module/: RecommendModule.kt
app/src/main/java/com/zq/zqplayer/database/: AppDatabase.kt
app/src/main/java/com/zq/zqplayer/database/bean/: User.kt
app/src/main/java/com/zq/zqplayer/database/dao/: UserDao.kt
app/src/main/java/com/zq/zqplayer/event/: LoginSuccessEvent.kt
app/src/main/java/com/zq/zqplayer/fragment/: AmusementFragment.kt  DiscoveryFragment.kt  EmptyFragment.kt  HomeFragment.kt  MineFragment.kt  SubscribeFragment.kt
app/src/main/java/com/zq/zqplayer/fragment/live/: ChatFragment.kt  RankingFragment.kt  TheHostFragment.kt  VIPListFragment.kt
app/src/main/java/com/zq/zqplayer/fragment/main/: AmusementFragment.kt  DiscoveryFragment.kt  HomeFragment.kt  MineFragment.kt  SubscribeFragment.kt
app/src/main/java/com/zq/zqplayer/fragment/topnavigation/: RecommendFragment.kt
app/src/main/java/com/zq/zqplayer/http/: BaseObserver.java
app/src/main/java/com/zq/zqplayer/http/request/: LiveRequest.java  LoginRequest.kt  ZQPlayerVideoListRequest.java  (+1 more)
app/src/main/java/com/zq/zqplayer/model/: PandaTvDataBean.java  PandaTvListItemBean.java  PandaTvLiveDataBean.java  RecommendBannerMultiItem.kt  RecommendLiveItemMultiItem.kt  TopNavigationItemBean.kt  VideoHttpResult.java
app/src/main/java/com/zq/zqplayer/mvvm/: LifecycleProviderModule.kt  ViewModelFactory.kt
app/src/main/java/com/zq/zqplayer/presenter/: RecommendPresenter.kt
app/src/main/java/com/zq/zqplayer/receiver/: MyJPushMessageReceiver.java  MyReceiver.java
app/src/main/java/com/zq/zqplayer/service/: VideoService.java
app/src/main/java/com/zq/zqplayer/test/: OpenGL2Activity.java  PushVideoActivity.kt  TempActivity.kt  TestListActivity.kt  ZQPlayerServiceTestActivity.kt
app/src/main/java/com/zq/zqplayer/util/: FloatingActionButtonUtil.java  UserInfoUtil.kt  VideoDataUtil.kt
app/src/main/java/com/zq/zqplayer/wiget/: GlideRoundTransform.java
app/src/main/res/drawable/: bg_gray_search.xml  bg_solid_corners_25_cccccc.xml  bg_solid_corners_25_main_color.xml  bj_selector_login.xml  ic_arrow_right_black.xml  ic_barrage_on.xml  ic_share.xml  ic_star.xml  selector_tab_amusement.xml  selector_tab_discover.xml  selector_tab_home.xml  selector_tab_mine.xml  selector_tab_subscribe.xml
app/src/main/res/layout/: activity_live.xml  activity_login.xml  activity_main.xml  activity_open_gl2.xml  activity_push_the_flow.xml  activity_push_video.xml  activity_register.xml  activity_splash.xml  activity_test_list.xml  activity_zq_player_service_test.xml  fragment_amusement.xml  fragment_chat.xml  fragment_discovery.xml  fragment_empty.xml  fragment_home.xml  fragment_mine.xml  fragment_new_recommend.xml  fragment_ranking.xml  fragment_recommend.xml  fragment_subscribe.xml  fragment_the_host.xml  fragment_vip_list.xml  item_chat.xml  item_in_recommend_banner.xml  item_new_recommend_live_item.xml  item_recommend_all_live_title.xml  item_recommend_banner.xml  item_recommend_live_item.xml  item_recommend_search.xml  item_test.xml  main_tab_layout.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/test/java/com/zq/zqplayer/: ExampleUnitTest.kt
playerlib/: CMakeLists.txt  bintrayUpload.gradle  build.gradle
playerlib/jniLib/x86/include/libavutil/: ffversion.h
playerlib/libs/armeabi/pkgconfig/: libavcodec.pc  libavfilter.pc  libavutil.pc
playerlib/libs/include/libavutil/: ffversion.h
playerlib/src/androidTest/java/com/zq/playerlib/: ExampleInstrumentedTest.java
playerlib/src/main/: AndroidManifest.xml
playerlib/src/main/aidl/com/zq/playerlib/service/: PlayerItemInfo.aidl  StatusListener.aidl  ZQPlayerServiceBinder.aidl
playerlib/src/main/cpp/: AndroidLog.cpp  AndroidLog.h  Audio.cpp  Audio.h  Clock.h  Decoder.cpp  Decoder.h  LibInit.cpp  LibInit.h  PlayerCallJava.cpp  PlayerCallJava.h  PlayerFrame.cpp  PlayerFrame.h  PlayerFrameAudio.cpp  PlayerFrameAudio.h  PlayerFrameVideo.cpp  PlayerFrameVideo.h  Pusher.cpp  Pusher.h  Video.cpp  Video.h  common.h  player.cpp  player.h
playerlib/src/main/java/com/zq/playerlib/: StatusListener.kt  ZQPlayer.kt  ZQPusher.java  ZQVideoView.kt
playerlib/src/main/java/com/zq/playerlib/opengl/: FullViewRenderer.java  OpenGlUtil.java
playerlib/src/main/java/com/zq/playerlib/service/: DeviceInfoUtil.java  PlayerItemInfo.kt  ZQPlayerService.kt  ZQPlayerServiceWrap.kt
playerlib/src/main/res/drawable/: bg_bottom_bar.xml  bg_clarity.xml  bg_top_bar.xml  ic_back_white.xml  ic_barrage_off.xml  ic_close.xml  ic_full_screen.xml  ic_pause.xml  ic_people.xml  ic_play.xml  ic_scan.xml  ic_search.xml  ic_setting.xml  ic_stop.xml  ic_tv.xml  list_bg_close.xml
playerlib/src/main/res/layout/: layout_service_video.xml  layout_zq_video_view.xml
playerlib/src/main/res/raw/: vertexshader.glsl
playerlib/src/main/res/values/: colors.xml
playerlib/src/test/java/com/zq/playerlib/: ExampleUnitTest.java
(+52 files in other folders)
